fix visibility of normal selects

--- a/plugins/Morpheus/stylesheets/main.less
+++ b/plugins/Morpheus/stylesheets/main.less
@@ -23,6 +23,11 @@ button,
   color: @theme-color-text;
 }
 
+select {
+  // opacity is set to 0 by materialize css
+  opacity: 1;
+}
+
 h2 {
   font-weight: normal;
   font-size: 24px;
